--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "bootstrap": "^5.3.0",
+    "firebase": "^9.22.1",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
