--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "firebase": "^9.22.1",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "react-tag-input-component": "^2.0.2",
+    "react-toastify": "^9.1.3",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.2",
     "file-loader": "^6.2.0"
   }
 }
