--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "@types/react-sidebar": "^3.0.2",
     "bootstrap": "^5.3.0",
     "firebase": "^9.22.1",
     "node-sass": "^9.0.0",
@@ -19,11 +20,14 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.9.0",
+    "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-sidebar": "^3.0.2",
     "react-spinners": "^0.13.8",
     "react-tag-input-component": "^2.0.2",
     "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
